--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 PORT=3000
 NODE_ENV=development
 DB_URI=mongodb+srv://yashaswini13695:Jdk6Jbxrx95yVtx6@onboarding.8iyfepm.mongodb.net/?retryWrites=true&w=majority&appName=Onboarding
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=r2zcbb0U]5D-08n
 JWT_EXPIRATION=1h
 LOG_LEVEL=info
